--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular2-modal": "^2.0.2",
     "core-js": "^2.4.1",
     "ng2-popup": "^0.3.2",
+    "ng2-rating": "0.0.6",
     "ng2-recaptcha": "^1.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
