--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.1.0",
     "angular2-modal": "^2.0.2",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "ng2-popup": "^0.3.2",
     "ng2-rating": "0.0.6",
     "ng2-recaptcha": "^1.4.0",
