--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-modal": "^2.0.2",
     "angular2-notifications": "^0.4.47",
     "angular2-select2": "^1.0.0",
+    "angular2-text-mask": "^2.1.0",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
