--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mydatepicker": "^1.0.28",
+    "ng2-bs-dropdown": "^0.7.0",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-dropdown": "0.0.15",
     "ng2-notifications": "^0.3.0",
