--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-bs3-modal": "^0.10.4",
     "ng2-dropdown": "0.0.15",
     "ng2-file-upload": "^1.1.4-2",
+    "ng2-loading-animate": "0.0.16",
     "ng2-notifications": "^0.3.0",
     "ng2-notify": "^1.4.0",
     "ng2-nouislider": "^1.4.1",
